--- a/app/views/static_pages/contact.erb
+++ b/app/views/static_pages/contact.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "About")%>
+<% provide(:title, "Contact")%>
 <h1>Contact</h1>
 <p>
   This is a Contact Page with some contact information
