Finished the layout and some routes

--- a/app/views/static_pages/contact.erb
+++ b/app/views/static_pages/contact.erb
@@ -2,5 +2,6 @@
 <h1>Contact</h1>
 <p>
   This is a Contact Page with some contact information
+  <a href="http://www.railstutorial.org/#contact">contact page</a>
 
 </p>
